revert assertions